--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="Register">
         <h2>ĐĂNG KÝ CLB NGÔ GIA TỰ</h2>
         <form action="https://formspree.io/f/mjgrlezy" method="POST">
-        <input type="hidden" name="_next" value="https://toancreator.github.io/ThanhCong.html">        
+        <input type="hidden" name="_next" value="https://toancreator.github.io/NGT/ThanhCong.html">        
             <div class="input-group">
                 <label>Họ và Tên</label>
                 <input type="text" name="Full Name" placeholder="Trần Hoàng Toàn" required>
